--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Etherspot BUIDLer example dapp</title>
+    <style>
+      @import url('https://public.etherspot.io/buidler/fonts/PT-Root-UI_Regular.css');
+      @import url('https://public.etherspot.io/buidler/fonts/PT-Root-UI_Medium.css');
+      @import url('https://public.etherspot.io/buidler/fonts/PT-Root-UI_Bold.css');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
